[gd_scene load_steps=13 format=3 uid="uid://nvg1ld55eo5e"]

[ext_resource type="Script" path="res://scripts/bat.gd" id="1_gg5ui"]
[ext_resource type="Texture2D" uid="uid://b6ctnul46ysap" path="res://media/graphics/bat.png" id="1_vlslv"]
[ext_resource type="Script" path="res://scripts/health_component.gd" id="2_2d4o4"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="3_v7f0x"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="4_ajj6m"]
[ext_resource type="PackedScene" uid="uid://div8rux31gto0" path="res://scenes/despawner.tscn" id="5_qx7vs"]
[ext_resource type="PackedScene" uid="uid://edlgvg0tw61b" path="res://scenes/stop_component.tscn" id="6_jsgo3"]
[ext_resource type="Script" path="res://scripts/flame_spawner.gd" id="7_5xrky"]

[sub_resource type="Animation" id="Animation_qfq6i"]
resource_name = "default"
length = 0.600002
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_bvvfl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gqjwf"]
_data = {
"RESET": SubResource("Animation_bvvfl"),
"default": SubResource("Animation_qfq6i")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r002h"]
size = Vector2(16, 16)

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_gg5ui")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vlslv")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gqjwf")
}
autoplay = "default"

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("2_2d4o4")
max_hp = 1

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 288
script = ExtResource("3_v7f0x")
health_component = NodePath("../HealthComponent")
awarded_points = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_r002h")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
script = ExtResource("4_ajj6m")
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_r002h")

[node name="Despawner" parent="." instance=ExtResource("5_qx7vs")]

[node name="StopComponent" parent="." node_paths=PackedStringArray("animation_player", "hitbox", "hurtbox") instance=ExtResource("6_jsgo3")]
animation_player = NodePath("../AnimationPlayer")
hitbox = NodePath("../Hitbox")
hurtbox = NodePath("../Hurtbox")

[node name="FlameSpawner" type="Node2D" parent="."]
script = ExtResource("7_5xrky")

[connection signal="hp_changed" from="HealthComponent" to="." method="_on_hp_changed"]
[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
